--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -209,7 +209,7 @@
         </item>
         <item>
          <property name="text">
-          <string>58: C_SC_TA_1带时标(7bytes)的单命令</string>
+          <string>58: C_SC_TA_1带时标的单命令</string>
          </property>
         </item>
         <item>
